# recon

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/: README.md
artifacts/recovered_from_recycle_bin/: read.txt
autodl_scripts/: README.md  common.sh  install_env.sh  launch_tmux.sh  train_all_single_models.sh  train_ensemble.sh  train_gdn.sh  train_one.sh
data/: README.md
data/raw/: README.md
docs/: TRAINING_AND_EVAL.md
notebooks/: check.ipynb  convnext11.ipynb  efficientnet.ipynb  ensemble_four_models_meta.ipynb  gdn.ipynb  mambaout_kobe.ipynb  mambaout_small_rw.ipynb  mobilenetv3_large_100.ipynb  resnet18.ipynb  vit11.ipynb
scripts/: build_sample_dataset.py  check_model_size.py  eval_checkpoint.py  import_weather_zip.py  run_all_single_models.ps1  scan_recycle_bin.py  summarize_f1.py  sync_single_model_notebooks.py  train_convnext11.py  train_dinov2_small.py  train_efficientnet.py  train_ensemble_four_models_meta.py  train_fasternet.py  train_fastvit_s24.py  train_fastvit_sa36.py  train_gdn.py  train_mambaout_kobe.py  train_mambaout_small_rw.py  train_mobilenetv4.py  train_mobilenetv4_hyper.py  train_repvit.py  train_repvit_m2.py  train_resnet18.py  train_small_strong_ensemble.py  train_timm_preset.py  train_vit11.py  use_gpu_env.ps1
src/raicom/: __init__.py  checkpoints.py  classifier.py  cli.py  constants.py  data.py  device.py  ensemble.py  mixup.py  paths.py  timm_factory.py  timm_feature_classifier.py  timm_presets.py  training.py  two_phase.py
weather_dataset/: readme
(+6 files in other folders)
