[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "raicom"
version = "0.1.0"
description = "Weather image classification experiments (timm, ensembles, notebooks)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
train = [
    "numpy>=1.24",
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "xgboost>=2.0",
]
gdn = [
    "flash-linear-attention>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
